--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/rd.css">
 </head>
 <body>
-    <h1>RD Batch 3</h1>
+    <h1>RD Batch 3 - New Branch</h1>
     <p>Master Branch </p>
     <p>Feature 1 Branch </p>
 </body>
